--- a/style.css
+++ b/style.css
@@ -23,11 +23,11 @@ body {
    color: #414224;
 }
 
-/* .wrapper {
+.wrapper {
    width: 100%;
    font-size: 1rem;
    margin: 0 auto;
-} */
+}
 
 header {
    background-color: rgb(239, 234, 228, 0.8);
